<resources>
    <string name="app_name">My Places</string>
    <string name="action_add">Add</string>
    <string name="action_sort">Sort</string>
    <string name="action_filter">Filter</string>
    <string name="details_delete">Delete</string>
    <string name="details_edit">Edit</string>
    <string name="title_activity_add_place">Add new place</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">Details</string>
    <string name="add_new_place_button">Add new place</string>
    <string name="title_activity_edit_place">Edit place</string>
    <string name="filter_dialog_title">Filter</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="blank"></string>
    <string name="sort_dialog_title">Sort</string>
    <string name="button_add_place">Add new place</string>
    <string name="img_intent_key">img</string>
    <string name="object_intent_key">object</string>
    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="comment_hint">Comment</string>
    <string name="city_hint">City</string>
    <string name="country_hint">Country</string>
    <string name="add_img_description">add_img</string>
    <string name="place_img_description">place_img</string>
    <string name="rating_from">Rating from:</string>
    <string name="rating_to">Rating to:</string>
    <string name="direction_title">Direction:</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="place_toast">place</string>
    <string name="city_toast">city</string>
    <string name="country_toast">country</string>
    <string name="reset_button">Reset</string>
    <string name="title_activity_add_new_place">Add new place</string>
    <string name="tag_hint">Tag</string>
    <string name="add_tag">Add tag</string>
    <string name="details_tags">Tags</string>
    <string name="rating_toast">rating</string>
</resources>
