<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_title"
        android:id="@+id/direction_dialog"
        android:layout_gravity="center_horizontal" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/direction_group"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/descending"/>
        <RadioButton android:id="@+id/radio_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending"/>
    </RadioGroup>


</LinearLayout>