<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:layout_centerHorizontal="true">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_from"
            android:layout_gravity="center_horizontal" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/rating_from_group"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/from_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="1"/>

            <RadioButton android:id="@+id/from_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"/>

            <RadioButton android:id="@+id/from_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"/>

            <RadioButton android:id="@+id/from_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"/>

            <RadioButton android:id="@+id/from_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_to"
            android:layout_gravity="center_horizontal" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/rating_to_group"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/to_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"/>

            <RadioButton android:id="@+id/to_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"/>

            <RadioButton android:id="@+id/to_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"/>

            <RadioButton android:id="@+id/to_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"/>

            <RadioButton android:id="@+id/to_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="5"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/country_hint" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/country_spinner"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/city_hint" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city_spinner"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/address_hint" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address_spinner"
            android:layout_marginLeft="15dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tag_hint" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tag_spinner"
            android:layout_marginLeft="15dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp" />

    </LinearLayout>

</ScrollView>
